complete create and show

--- a/app/views/properties/new.html.erb
+++ b/app/views/properties/new.html.erb
@@ -14,6 +14,21 @@
     </p>
 
     <p>
+      <%= f.label :price %><br>
+      <%= f.text_field :price %>
+    </p>
+
+    <p>
+      <%= f.label :user %><br>
+      <%= f.text_field :user %>
+    </p>
+
+    <p>
+      <%= f.label :status %><br>
+      <%= f.text_field :status %>
+    </p>
+
+    <p>
       <%= f.submit %>
     </p>
 
