--- a/app/views/properties/new.html.erb
+++ b/app/views/properties/new.html.erb
@@ -3,6 +3,20 @@
 <div id="form">
 
   <%= form_for :property, url: properties_path do |f| %>
+    <% if @property.errors.any? %>
+        <div id="error_explanation">
+          <h2>
+            <%= pluralize(@property.errors.count, "error") %> prohibited
+            this property from being saved:
+          </h2>
+          <ul>
+            <% @property.errors.full_messages.each do |msg| %>
+              <li><%= msg %></li>
+            <% end %>
+          </ul>
+        </div>
+      <% end %>
+
     <p>
       <%= f.label :name %><br>
       <%= f.text_field :name %>
