--- a/app/views/properties/index.html.erb
+++ b/app/views/properties/index.html.erb
@@ -18,6 +18,7 @@
       <td><%= property.user %></td>
       <td><%= property.status %></td>
       <td><%= link_to 'Show', property_path(property) %></td>
+      <td><%= link_to 'edit', edit_property_path(property) %> </td>
     </tr>
   <% end %>
 </table>
