add property list link to show

--- a/app/views/properties/show.html.erb
+++ b/app/views/properties/show.html.erb
@@ -1,3 +1,4 @@
+<h1>This is your property</h1>
 <p>
   <strong>Property name: </strong>
   <%= @property.name %>
@@ -22,3 +23,5 @@
   <strong>Property status: </strong>
   <%= @property.status %>
 </p>
+
+<%= link_to 'Back', properties_path %>
