updated show and edit with form

--- a/app/views/properties/index.html.erb
+++ b/app/views/properties/index.html.erb
@@ -17,8 +17,7 @@
       <td><%= property.price %></td>
       <td><%= property.user %></td>
       <td><%= property.status %></td>
-      <td><%= link_to 'Show', property_path(property) %></td>
-      <td><%= link_to 'edit', edit_property_path(property) %> </td>
+      <td><%= link_to 'Detail', property_path(property) %></td>
       <td><%= link_to 'Delete',
                                 property_path(property),
                                 method: :delete,
