--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,2 +1,5 @@
-<h1>Welcome to Property Management</h1>
-<%= link_to 'My Property List', controller: 'properties' %>
+<h1>欢迎来到PM</h1>
+
+<p id='index-link'>
+  <%= link_to 'My Property List', controller: 'properties' %>
+</p>
