--- a/app/views/properties/_form.html.erb
+++ b/app/views/properties/_form.html.erb
@@ -1,46 +1,48 @@
-<%= form_for @property do |f| %>
+<div id='form' class="center-div" align="center" >
+  <%= form_for @property do |f| %>
 
-  <% if @property.errors.any? %>
-    <div id="error_explanation">
-      <h2>
-        <%= pluralize(@property.errors.count, "error") %> prohibited
-        this property from being saved:
-      </h2>
-      <ul>
-        <% @property.errors.full_messages.each do |msg| %>
-          <li><%= msg %></li>
-        <% end %>
-      </ul>
-    </div>
+    <% if @property.errors.any? %>
+      <div id="error_explanation">
+        <h2>
+          <%= pluralize(@property.errors.count, "error") %> prohibited
+          this property from being saved:
+        </h2>
+        <ul>
+          <% @property.errors.full_messages.each do |msg| %>
+            <li><%= msg %></li>
+          <% end %>
+        </ul>
+      </div>
+    <% end %>
+
+    <p>
+      <%= f.label :name %><br>
+      <%= f.text_field :name %>
+    </p>
+
+    <p>
+      <%= f.label :date %><br>
+      <%= f.text_field :date %>
+    </p>
+
+    <p>
+      <%= f.label :price %><br>
+      <%= f.text_field :price %>
+    </p>
+
+    <p>
+      <%= f.label :user %><br>
+      <%= f.text_field :user %>
+    </p>
+
+    <p>
+      <%= f.label :status %><br>
+      <%= f.text_field :status %>
+    </p>
+
+    <p>
+      <%= f.submit %>
+    </p>
+
   <% end %>
-
-  <p>
-    <%= f.label :name %><br>
-    <%= f.text_field :name %>
-  </p>
-
-  <p>
-    <%= f.label :date %><br>
-    <%= f.text_field :date %>
-  </p>
-
-  <p>
-    <%= f.label :price %><br>
-    <%= f.text_field :price %>
-  </p>
-
-  <p>
-    <%= f.label :user %><br>
-    <%= f.text_field :user %>
-  </p>
-
-  <p>
-    <%= f.label :status %><br>
-    <%= f.text_field :status %>
-  </p>
-
-  <p>
-    <%= f.submit %>
-  </p>
-
-<% end %>
+</div>
